<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_shop"
        android:enabled="true"
        android:icon="@drawable/ic_shop"
        android:title="@string/shop"/>
    <item
        android:id="@+id/action_brands"
        android:enabled="true"
        android:icon="@drawable/ic_brand"
        android:title="@string/brands"/>
    <item
        android:id="@+id/action_wishlist"
        android:enabled="true"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/wishlist"/>
    <item
        android:id="@+id/action_me"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/me"/>
</menu>